# QtSample

./: .gitignore
Camera/: CMakeLists.txt  build
Camera/resources/: resources.qrc  shapes.frag  shapes.vert
Camera/src/: camera.h  main.cpp  mainwindow.cpp  mainwindow.h  openglwidget.cpp  openglwidget.h
FileSystemModel/resources/: resources.qrc
FileSystemModel/src/: mainwindow.cpp  mainwindow.h
StandardItemModel/src/: mINWINDOW.H  main.cpp  mainwindow.cpp  mainwindow.h
TreeWidget/: CMakeLists.txt
TreeWidget/src/: mainwindow.cpp  mainwindow.h
